RESOLVED FIXED 266018
CSS line clamp together with float not working correctly
https://bugs.webkit.org/show_bug.cgi?id=266018
Summary CSS line clamp together with float not working correctly
Christopher Adels
Reported 2023-12-07 14:37:39 PST
In Safari 15 it was also wrong but better :D this codepen works in safari 15 but not 17 https://codepen.io/Chrisstopher/pen/WNPPPZv this codepen is a bit hacky but works in 17 https://codepen.io/Chrisstopher/pen/KKJJEPm here is a codepen how it should work (see chrome) but it's not in safari 15 and 17 https://codepen.io/Chrisstopher/pen/LYqqaVq
Attachments
rendering in safari, firefox, chrome (463.09 KB, image/png)
2023-12-07 20:52 PST, Karl Dubost
no flags
Test reduction (269 bytes, text/html)
2023-12-18 08:47 PST, zalan
no flags
[fast-cq]Patch (20.17 KB, patch)
2023-12-19 07:49 PST, zalan
no flags
Karl Dubost
Comment 1 2023-12-07 20:52:46 PST
Created attachment 468938 [details] rendering in safari, firefox, chrome I think there is a bug somewhere about line clamp and text-wrap.
Karl Dubost
Comment 2 2023-12-07 20:58:33 PST
There is also Bug 233770
Radar WebKit Bug Importer
Comment 3 2023-12-07 21:14:18 PST
zalan
Comment 4 2023-12-18 08:47:23 PST
Created attachment 469110 [details] Test reduction
zalan
Comment 5 2023-12-18 14:11:28 PST
bug 266599 tracks the longstanding missing content issue (https://codepen.io/Chrisstopher/pen/LYqqaVq) while this tracks the Safari 15 -> 17 regression.
zalan
Comment 6 2023-12-19 07:49:55 PST
Created attachment 469128 [details] [fast-cq]Patch
EWS
Comment 7 2023-12-19 10:27:33 PST
Committed 272278@main (da42549d3773): <https://commits.webkit.org/272278@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 469128 [details].
Alex Stretovich
Comment 8 2024-09-16 04:07:19 PDT
(In reply to zalan from comment #5) > (https://codepen.io/Chrisstopher/pen/LYqqaVq) while this tracks the Safari > 15 -> 17 regression. Safari 17.6 (19618.3.11.11.5), still works incorrectly (float style is not being applied).
Note You need to log in before you can comment on or make changes to this bug.